# Project-Chimera-The-Agentic-Infrastructure-Challenge-

./: .coderabbit.yaml  .gitignore  ARCHITECTURAL_APPROACH.md  CHIMERA_PRESENTATION.md  Day_3_Submission_Report.md  Dockerfile  FULL REPORT.MD  Makefile  PRESENTATION_LOOM.md  README.md  SOUL.md  antigravity_chat_log_chimera.md  docker-compose.test.yml  implementation_plan.md  main.py  pyproject.toml  report.md  task_checklist.md  walkthrough test2.md
.cursor/: rules
.github/workflows/: main.yml
chimera/: commerce.py  fetcher.py  judge.py  mcp_client.py  planner.py  skills.py  swarm.py  worker.py
mcp/: coinbase_server.py  twitter_server.py  weaviate_server.py
research/: architecture_strategy.md  day 3 tasks and tests.md  day1_report.md  day2_report.md  research_notes.md  tooling_strategy.md
skills/: README.md
skills/skill_download_content/: README.md
skills/skill_generate_meta_tags/: README.md
skills/skill_publish_to_moltbook/: README.md
skills/skill_trend_analyzer/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
ui_sample/: README.md  index.css  index.html  index.js
